<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvTemperatura"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalizacaoActivity">

    <Button
        android:id="@+id/btnLocalTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="204dp"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:text="@string/btnCalcula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCidadeRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvSas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTemperaturaRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvTemperaturaAqui"
        app:layout_constraintTop_toBottomOf="@+id/tvCidadeRec" />

    <TextView
        android:id="@+id/tvClimaRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="56dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvClimaAqui"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperaturaRec" />

    <TextView
        android:id="@+id/tvSas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtCidade"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTemperaturaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="75dp"
        android:text="@string/lblTemperatura"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSas" />

    <TextView
        android:id="@+id/tvClimaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:text="@string/lblClima"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperaturaAqui" />

    <ImageButton
        android:id="@+id/btnLigar"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/todo"
        android:onClick="LigarDev"
        android:src="@drawable/ic_call_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:text="@string/Ajuda"
        app:layout_constraintEnd_toStartOf="@+id/btnLigar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:onClick="openActivitySuporte"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLigar"
        android:src="@drawable/ic_message_black_24dp"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>